Fix text not centered

--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -5,6 +5,7 @@
   color: white;
   display: flex;
   height: 100%;
+  text-align: center;
   justify-content: center;
   flex-direction: column;
   align-items: center;
